still need to solve assignment 2

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 2</title>
+    <link rel="stylesheet" href="assets/css/master.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../source/main.css">
 </head>
 <body>
-    <p class="">Tjis is paragraph</p>
-    <p >Tjis is paragraph</p>
-    <p >Tjis is paragraph</p>
-    <p >Tjis is paragraph</p>
-
+    <div class="assign-1-shape-1">Normal Div</div>
+    <div class="assign-1-shape-2">Normal Div</div>
+    <div class="assign-1-shape-3">Normal Div</div>
 </body>
 </html>
